--- a/index.html
+++ b/index.html
@@ -70,19 +70,19 @@
                             <h1 class="title is-1 publication-title">MTL-Split: Multi-Task Learning for Edge Devices using Split Computing</h1>
                             <div class="is-size-5 publication-authors">
                                 <span class="author-block">
-                                    <a href="https://www.capogrosso.eu">Luigi Capogrosso</a><sup>1</sup>,
+                                    <a target="_blank" href="https://www.capogrosso.eu">Luigi Capogrosso</a><sup>1</sup>,
                                 </span>
                                 <span class="author-block">
-                                    <a href="https://www.dimi.univr.it/?ent=persona&id=22371&lang=en">Enrico Fraccaroli</a><sup>1,2</sup>,
+                                    <a target="_blank" href="https://www.dimi.univr.it/?ent=persona&id=22371&lang=en">Enrico Fraccaroli</a><sup>1,2</sup>,
                                 </span>
                                 <span class="author-block">
-                                    <a href="https://cs.unc.edu/person/samarjit-chakraborty/">Samarjit Chakraborty</a><sup>1,2</sup>,
+                                    <a target="_blank" href="https://cs.unc.edu/person/samarjit-chakraborty/">Samarjit Chakraborty</a><sup>1,2</sup>,
                                 </span>
                                 <span class="author-block">
-                                    <a href="https://www.dimi.univr.it/?ent=persona&id=59&lang=en">Franco Fummi</a><sup>1</sup>,
+                                    <a target="_blank" href="https://www.dimi.univr.it/?ent=persona&id=59&lang=en">Franco Fummi</a><sup>1</sup>,
                                 </span>
                                 <span class="author-block">
-                                    <a href="https://www.dimi.univr.it/?ent=persona&id=218&lang=en">Marco Cristani</a><sup>1</sup>,
+                                    <a target="_blank" href="https://www.dimi.univr.it/?ent=persona&id=218&lang=en">Marco Cristani</a><sup>1</sup>
                                 </span>
                             </div>
 
@@ -101,7 +101,7 @@
                                 <div class="publication-links">
                                     <!-- Proceedings link. -->
                                     <span class="link-block">
-                                        <a href="" class="external-link button is-normal is-rounded is-dark">
+                                        <a target="_blank" href="" class="external-link button is-normal is-rounded is-dark">
                                             <span class="icon">
                                                 <i class="fas fa-file-pdf"></i>
                                             </span>
@@ -110,7 +110,7 @@
                                     </span>
                                     <!-- arXiv link. -->
                                     <span class="link-block">
-                                        <a href="" class="external-link button is-normal is-rounded is-dark">
+                                        <a target="_blank" href="" class="external-link button is-normal is-rounded is-dark">
                                             <span class="icon">
                                                 <i class="ai ai-arxiv"></i>
                                             </span>
@@ -119,7 +119,7 @@
                                     </span>
                                     <!-- Code link. -->
                                     <span class="link-block">
-                                        <a href="https://github.com/intelligolabs/MTL-Split" class="external-link button is-normal is-rounded is-dark">
+                                        <a target="_blank" href="https://github.com/intelligolabs/MTL-Split" class="external-link button is-normal is-rounded is-dark">
                                             <span class="icon">
                                                 <i class="fab fa-github"></i>
                                             </span>
@@ -182,7 +182,7 @@
         <footer class="footer">
             <div class="container">
                 <div class="content has-text-centered">
-                    <a class="icon-link" href="https://github.com/luigicapogrosso" class="external-link" disabled>
+                    <a class="icon-link" target="_blank" href="https://github.com/luigicapogrosso" class="external-link" disabled>
                         <i class="fab fa-github"></i>
                     </a>
                 </div>
@@ -190,12 +190,12 @@
                     <div class="column is-8">
                         <div class="content">
                             <p>
-                                This website is licensed under a <a rel="license"
+                                This website is licensed under a <a rel="license" target="_blank"
                                 href="http://creativecommons.org/licenses/by-sa/4.0/">Creative
                                 Commons Attribution-ShareAlike 4.0 International License</a>.
                             </p>
                             <p>
-                                The source code is based on <a href="https://github.com/nerfies/nerfies.github.io">Nerfies</a>.
+                                The source code is based on <a target="_blank" href="https://github.com/nerfies/nerfies.github.io">Nerfies</a>.
                             </p>
                         </div>
                     </div>
