--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <section class="hero teaser">
             <div class="container is-max-desktop">
                 <div class="hero-body has-text-centered">
-                    <img src="./static/images/teaser.png" alt="I-SPLIT abstract" type="image/png" style="width: 80%; height: 80%;">
+                    <img src="./static/images/teaser.png" alt="MTL-Split teaser" type="image/png" style="width: 80%; height: 80%;">
                     <h6 class="subtitle is-6 has-text-centered">
                         The proposed architecture for handling complex inference tasks on edge devices by integrating Split Computing (SC) and Multi-Task Learning (MTL).
                         This architecture consists of two components: <i>i)</i> a shared <i>backbone</i> deployed on the edge device, and <i>ii)</i>  a series of <i>task-solving heads</i> on a single or multiple remote devices.
