Update teaser and add arXiv, BibTeX, and is-success banner

--- a/index.html
+++ b/index.html
@@ -50,10 +50,13 @@
                         </a>
                         <div class="navbar-dropdown">
                             <a class="navbar-item" target="_blank" href="https://vips4.github.io/I-Split/">
-                                I-SPLIT
+                                I-SPLIT (ICPR 2022)
                             </a>
                             <a class="navbar-item" target="_blank" href="https://luigicapogrosso.github.io/split_et_impera/">
-                                Split-Et-Impera
+                                Split-Et-Impera (DDECS 2023)
+                            </a>
+                            <a class="navbar-item" target="_blank" href="https://intelligolabs.github.io/sparsity_sc_ee/">
+                                Sparsity SC&EE (FDL 2024)
                             </a>
                         </div>
                     </div>
@@ -110,7 +113,7 @@
                                     </span>
                                     <!-- arXiv link. -->
                                     <span class="link-block">
-                                        <a target="_blank" href="" class="external-link button is-normal is-rounded is-dark">
+                                        <a target="_blank" href="https://arxiv.org/abs/2407.05982" class="external-link button is-normal is-rounded is-dark">
                                             <span class="icon">
                                                 <i class="ai ai-arxiv"></i>
                                             </span>
@@ -128,6 +131,13 @@
                                     </span>
                                 </div>
                             </div>
+
+                            <div class="columns is-centered">
+                                <div class="column has-text-centered">
+                                    <span class="tag is-success is-primary is-large">🎉 Accepted @ DAC 2024 🎉</span>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -138,7 +148,7 @@
         <section class="hero teaser">
             <div class="container is-max-desktop">
                 <div class="hero-body has-text-centered">
-                    <img src="./static/images/teaser.png" alt="MTL-Split teaser" type="image/png" style="width: 80%; height: 80%;">
+                    <img src="./static/images/teaser.png" alt="MTL-Split teaser" type="image/png" style="width: 70%; height: 70%;">
                     <h6 class="subtitle is-6 has-text-centered">
                         The proposed architecture for handling complex inference tasks on edge devices by integrating Split Computing (SC) and Multi-Task Learning (MTL).
                         This architecture consists of two components: <i>i)</i> a shared <i>backbone</i> deployed on the edge device, and <i>ii)</i>  a series of <i>task-solving heads</i> on a single or multiple remote devices.
@@ -174,7 +184,12 @@
         <section class="section" id="BibTeX">
             <div class="container is-max-desktop content">
                 <h2 class="title">BibTeX</h2>
-<pre><code>TBA.
+<pre><code>@article{capogrosso2024mtl,
+    title={MTL-Split: Multi-Task Learning for Edge Devices using Split Computing},
+    author={Capogrosso, Luigi and Fraccaroli, Enrico and Chakraborty, Samarjit and Fummi, Franco and Cristani, Marco},
+    journal={arXiv preprint arXiv:2407.05982},
+    year={2024}
+}
 </code></pre>
             </div>
         </section>
