--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
                             <a class="navbar-item" target="_blank" href="https://luigicapogrosso.github.io/learning_enabled_cps/">
                                 Learning-Enabled CPS (SIES 2024)
                             </a>
+                            <a class="navbar-item" target="_blank" href="https://intelligolabs.github.io/LO-SC/">
+                                LO-SC (VLSI Design 2025)
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -82,7 +85,7 @@
                                     <a target="_blank" href="https://www.dimi.univr.it/?ent=persona&id=22371&lang=en">Enrico Fraccaroli</a><sup>1,2</sup>,
                                 </span>
                                 <span class="author-block">
-                                    <a target="_blank" href="https://cs.unc.edu/person/samarjit-chakraborty/">Samarjit Chakraborty</a><sup>1,2</sup>,
+                                    <a target="_blank" href="https://cs.unc.edu/person/samarjit-chakraborty/">Samarjit Chakraborty</a><sup>2</sup>,
                                 </span>
                                 <span class="author-block">
                                     <a target="_blank" href="https://www.dimi.univr.it/?ent=persona&id=59&lang=en">Franco Fummi</a><sup>1</sup>,
