Add COMSNETS 2025 paper and update BibTeX

--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
                             <a class="navbar-item" target="_blank" href="https://intelligolabs.github.io/LO-SC/">
                                 LO-SC (VLSI Design 2025)
                             </a>
+                            <a class="navbar-item" target="_blank" href="https://luigicapogrosso.github.io/controllers_for_edge_cloud_cps/">
+                                Controllers for Edge-Cloud CPSs (COMSNETS 2025)
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -110,7 +113,7 @@
                                 <div class="publication-links">
                                     <!-- Proceedings link. -->
                                     <span class="link-block">
-                                        <a target="_blank" href="" class="external-link button is-normal is-rounded is-dark">
+                                        <a target="_blank" href="https://dl.acm.org/doi/abs/10.1145/3649329.3655686" class="external-link button is-normal is-rounded is-dark">
                                             <span class="icon">
                                                 <i class="fas fa-file-pdf"></i>
                                             </span>
@@ -190,13 +193,13 @@
         <section class="section" id="BibTeX">
             <div class="container is-max-desktop content">
                 <h2 class="title">BibTeX</h2>
-<pre><code>@article{capogrosso2024mtl,
-    title={MTL-Split: Multi-Task Learning for Edge Devices using Split Computing},
-    author={Capogrosso, Luigi and Fraccaroli, Enrico and Chakraborty, Samarjit and Fummi, Franco and Cristani, Marco},
-    journal={arXiv preprint arXiv:2407.05982},
-    year={2024}
-}
-</code></pre>
+<pre><code>@InProceedings{capogrosso2024mtl,
+    author     = {Capogrosso, Luigi and Fraccaroli, Enrico and Chakraborty, Samarjit and Fummi, Franco and Cristani, Marco},
+    booktitle  = {61st Design Automation Conference (DAC)},
+    title      = {{MTL-Split: Multi-Task Learning for Edge Devices using Split Computing}},
+    year       = {2024},
+    doi        = {10.1145/3649329.3655686},
+}</code></pre>
             </div>
         </section>
 
